force-app/main/default/objects/Invoice__c/fields/AmountTotal__c.field-meta.xml
<CustomField>
    <fullName>AmountTotal__c</fullName>
    <label>Amount Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>