force-app/main/default/objects/Invoice__c/fields/DisplayAccountBillingAddress__c.field-meta.xml
<CustomField>
    <fullName>DisplayAccountBillingAddress__c</fullName>
    <formula>InvoiceTemplate__r.Account__r.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DisplayAccountBillingAddress</label>
    <type>Text</type>
</CustomField>