force-app/main/default/objects/Invoice__c/fields/DisplayAccountBillingCity__c.field-meta.xml
<CustomField>
    <fullName>DisplayAccountBillingCity__c</fullName>
    <formula>InvoiceTemplate__r.Account__r.BillingPostalCode + &apos; &apos; + InvoiceTemplate__r.Account__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DisplayAccountBillingCity</label>
    <type>Text</type>
</CustomField>