force-app/main/default/objects/Invoice__c/fields/DisplayAccountName__c.field-meta.xml
<CustomField>
    <fullName>DisplayAccountName__c</fullName>
    <formula>InvoiceTemplate__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DisplayAccountName</label>
    <type>Text</type>
</CustomField>