force-app/main/default/objects/Invoice__c/fields/InvoicePaidDate__c.field-meta.xml
<CustomField>
    <fullName>InvoicePaidDate__c</fullName>
    <label>Invoice Paid Date</label>
    <type>Date</type>
</CustomField>