force-app/main/default/objects/Invoice__c/fields/InvoiceTemplate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Template</label>
    <referenceTo>InvoiceTemplate__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>