force-app/main/default/objects/Invoice__c/fields/InvoiceUrl__c.field-meta.xml
<CustomField>
    <fullName>InvoiceUrl__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Url</label>
    <type>Text</type>
</CustomField>