force-app/main/default/objects/Invoice__c/fields/PerformanceMonth__c.field-meta.xml
<CustomField>
    <fullName>PerformanceMonth__c</fullName>
    <formula>TEXT(Month__c) + &apos;, &apos;+ TEXT(YEAR(DATEVALUE(CreatedDate)))
/*TEXT(Month__c) + &apos;, &apos;+TEXT(YEAR(TODAY()))
TEXT(Month__c) + &apos;, &apos;+&apos;2022&apos;*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Performance Month</label>
    <type>Text</type>
</CustomField>