force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>DisplayAccountName__c</columns>
    <columns>Status__c</columns>
    <columns>InvoiceSentDate__c</columns>
    <columns>InvoicePaidDate__c</columns>
    <columns>PerformanceMonth__c</columns>
    <columns>AmountNetto__c</columns>
    <columns>AmountTotal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>