force-app/main/default/objects/Invoice__c/listViews/Last_Month_UStVA.listView-meta.xml
<ListView>
    <fullName>Last_Month_UStVA</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>AmountNetto__c</columns>
    <columns>AmountTotal__c</columns>
    <columns>VAT__c</columns>
    <columns>Month__c</columns>
    <columns>DisplayAccountName__c</columns>
    <columns>InvoiceSentDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>InvoiceSentDate__c</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>Last Month UStVA</label>
</ListView>