force-app/main/default/objects/Invoice__c/listViews/Not_sent.listView-meta.xml
<ListView>
    <fullName>Not_sent</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>AmountNetto__c</columns>
    <columns>AmountTotal__c</columns>
    <columns>VAT__c</columns>
    <columns>Month__c</columns>
    <columns>DisplayAccountName__c</columns>
    <columns>InvoiceSentDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>Not sent</label>
</ListView>